2008-09-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-isValidAttachmentName:filename]): accept all filenames except
	".", ".." and those that contain "/". Any other is valid and will
	be accepted.

2008-09-08  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck])	
	([LDAPSource -allEntryIDs])	
	([LDAPSource -fetchContactsMatching:match])
	([LDAPSource -lookupContactEntry:entryID])
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]): catch any
	LDAP connection failure exception and return an empty result if
	such as situation has happened.

2008-09-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailReply.m: made class a child of
	SOGoMailForward, since we need to access more or less the same
	fields from the original message, especially in outlook reply mode.
	([SOGoMailReply -setOutlookMode:newOutlookMode]): new accessor
	defining in which mode we are.

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForReply]): if the reply style is outlook, then we use the
	content generated for inline forwarding.
	([SOGoMailObject -useOutlookStyleReplies]): new method that
	indicates whether the ud key "SOGoMailUseOutlookStyleReplies".

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-expungeLastMarkedFolder]): do not perform the expunge if the
	marked folder is the current folder.

2008-09-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartAlternativeViewer.m
	([UIxMailPartAlternativeViewer -selectPartIndexFromTypes:]): give
	precedence on multipart/related parts.

	* UI/MailPartViewers/UIxMailRenderingContext.m
	([UIxMailRenderingContext -viewerForBodyInfo:_info]): add the
	mixed viewer as the viewer for "multipart/digest" content.

	* UI/MailPartViewers/UIxMailPartTextViewer.m (convertChars):